verif/test/deca/context/invalid/invalid-if-condition-type-mismatch-verif.res
src/test/deca/context/invalid/invalid-if-condition-type-mismatch.deca:10:8: Condition types is not valid, expected BOOLEAN
